# cubepy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-build-test-publish.yml  pypi-build-test.yml
scripts/: Untitled.ipynb  sphere.py
src/cubepy/: __init__.py  converged.py  gauss_kronrod.py  genz_malik.py  input.py  input_output.py  integration.py  point_gen.py  points.py  region.py  rule.py  rules.py  type_aliases.py
tests/: test_gauss_kronrod.py  test_genz_malik.py  test_input.py  test_integrand.py  test_models.py  test_point_gen.py  test_points.py  test_region.py  test_rules.py
