[metadata]
name = cubepy
author = Alex Reustle
author_email = alexander.reustle@nasa.gov
description = Adaptive Multiple Integration in Python
keywords =
  Integration
  Numerical Analysis
  Quadrature
  Cubature
license = BSD-3
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
ext_package = cubepy
packages = find:
package_dir =
    = src
include_package_data=True
install_requires =
  numpy

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[tox:tox]
envlist =
  py{37,38,39}
  docs
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}

[testenv:docs]
description = invoke sphinx-build to build HTML docs
deps =
  sphinx
  sphinx-panels
  sphinx-rtd-theme
  numpydoc
commands = sphinx-build -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color -W -bhtml {posargs}
           python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
