[metadata]
name = cubepy
description = Adaptive Multiple Integration in Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Alex Reustle
author_email = areustledev@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Mathematics
keywords =
    Integration
    Numerical Analysis
    Cubature
    Quadrature

[options]
packages = find:
install_requires =
    numpy>=1.21
python_requires = >=3.7
ext_package = cubepy
include_package_data = False
package_dir =
    = src
zip_safe = True

[options.packages.find]
where = src

[tox:tox]
envlist =
    py{37,38,39,310,311,312}
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py310
    3.12: py310

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}
